--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -1,10 +1,5 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-body {
-    background-color: #0a0e0e;
+
+body {       
     margin: 0;
    padding: 0;
 }
@@ -17,6 +12,17 @@ body {
    
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+}
+app-main-header {
+
+}
+
+nav {
+    width: 100%;
+}
 .container {
     display: grid; 
     grid-template-columns: repeat(auto-fit, minmax(250px , 1fr));
@@ -35,9 +41,11 @@ p {
 .main {
  /*  margin: auto; */
  display: block;
-    /* box-shadow: -1px 0px 0px rgba(0,0,0,0.96); */
+    /* box-shadow: -1px 0px 0px rgba(0,0,0,0.96);
+     border: 1px solid rgb(101, 107, 124);
+    */
     width: 100%;
-    border: 1px solid royalblue;
+   
     border-radius: 10px;
 }
 
@@ -52,6 +60,53 @@ input[type="search"] {
     height: 10vh;
     border-radius: 10px;
     display: block;
-    margin: 110px auto 0;
+    margin: 141px auto 0;
     text-align: center;
 }
+
+select.listContinents {
+    display: block;
+    margin: 5% auto;
+    height: 7vh;
+    width: 85%;
+    border-radius: 10px;
+    font-size: 12pt;
+}
+
+.details {    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 30vh;
+    width: 85%;
+    margin: auto;
+   background-color:  hsl(209, 23%, 22%);
+}
+
+/* ******************
+header {
+    height: 20vh;
+    background-color: hsl(209, 23%, 22%);
+    position: fixed;
+    width: 100%;   
+    top: 0;
+    left: 0;
+    z-index: 2;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+.modeSelector {
+    width: 25%;
+    margin-left: auto;
+}
+h1 {
+    width: 60%;
+    text-align: center;
+}
+h1, h2 {
+    font-size: medium;
+}
+********/
