--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,19 @@
 /* You can add global styles to this file, and also import other style files 
 @import '~bootstrap/dist/css/bootstrap.min.css'; */
 @import '~font-awesome/css/font-awesome.min.css'; 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: hsl(207, 26%, 17%);
+    width: 100vw;
+    overflow-x: hidden;
+    color: white;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 100;
+    padding: 0;
+    margin: 0;
+}
