--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,7 +1,7 @@
 <header>
     <h1 [routerLink]="['/countries']" >Countries of the world</h1>
     <div class="modeSelector">
-        <i class="fa fa-bars" [routerLink]="['/login']"></i>
+       <!-- <i class="fa fa-bars" [routerLink]="['/login']"></i> -->
         <h2>Dark Mode</h2>
     </div>
 </header>
