single country page styling

--- a/src/app/country-detail/country-detail.component.css
+++ b/src/app/country-detail/country-detail.component.css
@@ -111,7 +111,12 @@ button.btn.btn-outline-secondary {
         width: 10%;
     }
     .borders {       
-        width: 30%;        
+        width: 100%;        
+    }
+    .borders button {       
+        width: 25%;
+        height: 7vh;      
+        font-size: medium;
     }
 
 }
