--- a/src/app/country-detail/country-detail.component.css
+++ b/src/app/country-detail/country-detail.component.css
@@ -21,8 +21,8 @@ button.btn.btn-outline-secondary {
 }
 
 .countryInfor {
-    margin: 33px auto 5%;
-    width: 78%;
+    margin: 33px auto;
+    width: 100%;
     display: block;
     font-size: small;
 }
@@ -32,6 +32,7 @@ button.btn.btn-outline-secondary {
 }
 
 .borders {
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -41,9 +42,9 @@ button.btn.btn-outline-secondary {
 
 .borders button {
     display: block;
-    width: 40%;
+    width: 28%;
     height: 9vh;
-    margin: 5px;
+    margin: 5px auto;
     font-size: small;
 }
 
@@ -63,10 +64,25 @@ button.btn.btn-outline-secondary {
 
 .secondaryCountryDetails {
     margin-top: 5%;
+    padding-left: 9%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     height: 15vh;
+}
+
+.mainDetails {
+    padding-left: 10%;
+}
+
+.borderDetails {
+    width: 100vw;
+    margin: auto;
+}
+
+h4 {
+    padding-left: 10%;
+    padding-top: 10%;
 }
 
 @media screen and (min-width: 585px) {
