--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -63,6 +63,7 @@ input[type="search"] {
     display: block;
     margin: 141px auto 0;
     text-align: center;
+    font-size: 12pt;
 }
 
 select.listContinents {
