--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -32,8 +32,8 @@
             </div>
             <div class="borderDetails">  
                 <h4>Border</h4>            
-                <div class="borders">                       
-                    <button *ngFor="let borderCountry of borderingCountries">
+                <div class="borders" (click)="changeCountry()">                       
+                    <button class="borderCty" *ngFor="let borderCountry of borderingCountries">                        
                         {{borderCountry}}
                     </button>
                 </div>
