--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -14,15 +14,28 @@ header {
 .modeSelector {
     width: 25%;
     margin-left: auto;
+    display: flex;
 }
 h1 {
     width: 60%;
     text-align: center;
 }
 h1, h2 {
-    font-size: medium;
+    font-size: small;
 }
 h1:hover {
     cursor: pointer;
     color: red;
+}
+.moon {
+    width: 20px;
+    padding-right: 5px;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(200%) contrast(102%);
+}
+.lightMode {
+    background-color: white;
+    color: black;
+}
+img.lightMode {
+    filter: invert(0%) sepia(9%) saturate(0%) hue-rotate(1deg) brightness(94%) contrast(123%);
 }
