--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,8 +1,9 @@
-<header>
+<header [class.lightMode]="lightMode">
     <h1 [routerLink]="['/countries']" >Countries of the world</h1>
-    <div class="modeSelector">
+    <div class="modeSelector">       
+        <img [class.lightMode]="lightMode" class="moon" src="../../assets/moon-solid.svg" alt="" (click) = "toggleMode()">
        <!-- <i class="fa fa-bars" [routerLink]="['/login']"></i> -->
         <h2>Dark Mode</h2>
     </div>
 </header>
-<router-outlet></router-outlet>
+<router-outlet [class.lightMode]="lightMode"></router-outlet>
