--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <form #form="ngForm">
         <nav>
-            <input type="search" name="searchHere" placeholder="Search for a country..." >
+            <input type="search" name="searchHere" [(ngModel)]="countryFilter" placeholder="Search for a country..." >
             <select name="continents" class="listContinents" name="selectContinents">
                 <option value="">Filter by region</option>
                 <option value="africa">Africa</option>
