select country by buttons logic fix

--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -3,7 +3,7 @@
         <nav>
             <input type="search" name="searchHere" [(ngModel)]="countryFilter" placeholder="Search for a country..." >
             <select name="continents" class="listContinents" name="selectContinents">
-                <option value="">Filter by region</option>
+                <option value="all"  >Filter by region</option>                
                 <option value="africa">Africa</option>
                 <option value="america">America</option>
                 <option value="asia">Asia</option>
