--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -9,7 +9,7 @@
                 <div class="primaryCountryDetails">
                     <h2>{{name}}</h2>
                     <p>Native name: {{nativeName}}</p>
-                    <p>Population: {{population}}</p>
+                    <p>Population: {{population | number}}</p>
                     <p>Region: {{region}}</p>
                     <p>Sub region: {{subregion}}</p>
                     <p>Capital: {{capital}}</p>
