--- a/src/app/country-detail/country-detail.component.css
+++ b/src/app/country-detail/country-detail.component.css
@@ -16,7 +16,8 @@ button.btn.btn-outline-secondary {
     margin-left: 11%;
     width: 25%;
     height: 6vh;
-    background-color: hsl(210, 3%, 31%);
+    color: white;
+    background-color: hsl(209, 23%, 22%);
     background-image: url("../../assets/arrow-left-solid.svg");
     background-repeat: no-repeat;
 }
@@ -47,8 +48,8 @@ button.btn.btn-outline-secondary {
     height: 8vh;
     margin: 5px;
     font-size: small;
-    background-color: hsl(210, 34%, 46%);
-    border: 1px solid hsl(210, 34%, 46%);
+    background-color: hsl(209, 23%, 22%);
+    border: 1px solid hsl(209, 23%, 22%);
     color: white;
 }
 
