--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,5 +1,5 @@
 <header [class.lightMode]="lightMode">
-    <h1 [routerLink]="['/countries']" >Countries of the world</h1>
+    <h1 [routerLink]="['/countries']" >Where in the world?</h1>
     <div class="modeSelector">       
         <img [class.lightMode]="lightMode" class="moon" src="../../assets/moon-solid.svg" alt="" (click) = "toggleMode()">
        <!-- <i class="fa fa-bars" [routerLink]="['/login']"></i> -->
