--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -5,22 +5,19 @@
             <select class="listContinents" (change)='selectByContinent($event)' name="continents" placeholder="Filter by region">
                 <option *ngFor="let continent of continentList" [value]="continent"  [selected]='continent.selected == true' >{{continent}}</option>
             
-            </select>
-           
+            </select>           
         </nav>
         
     </form>
 
     <div class="container">
         <div class="main" *ngFor="let country of filteredCountries">
-            <img [src]="country.flag" alt="" [routerLink]="['/countries', country.name]">
+            <img [src]="country.flag" alt="flag of 'country.flag'" [routerLink]="['/countries', country.name]">
             <div class="details">
                 <h3>{{country.name}}</h3>
                 <h4>Population: {{country.population | number}}</h4>
                 <h5>Region: {{country.region}}</h5>
-                <h6>Capital: {{country.capital}}</h6>
-                <!-- <p>{{country.alpha3Code}}</p>
-                   <button [routerLink]="['/countries', country.name]">Details</button> -->
+                <h6>Capital: {{country.capital}}</h6>               
             </div>
         </div>
     </div>
