--- a/src/app/country-detail/country-detail.component.css
+++ b/src/app/country-detail/country-detail.component.css
@@ -17,7 +17,7 @@ button.btn.btn-outline-secondary {
     width: 25%;
     height: 6vh;
     color: white;
-    background-color: hsl(209, 23%, 22%);
+    background-color: var(--dark-mode-elements);
     background-image: url("../../assets/arrow-left-solid.svg");
     background-repeat: no-repeat;
 }
@@ -48,8 +48,8 @@ button.btn.btn-outline-secondary {
     height: 8vh;
     margin: 5px;
     font-size: small;
-    background-color: hsl(209, 23%, 22%);
-    border: 1px solid hsl(209, 23%, 22%);
+    background-color: var(--dark-mode-elements);
+    border: 1px solid var(--dark-mode-elements);
     color: white;
 }
 
