--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -37,8 +37,7 @@ p {
 .main { 
  display: block;    
     width: 300px;
-   margin: auto;
-   /* border-radius: 10px;*/
+   margin: 5% auto;  
 }
 
 img {
@@ -56,11 +55,11 @@ cursor: pointer;
 }
 
 input[type="search"] {
-    width: 90%;
+    width: 85%;
     height: 10vh;
     border-radius: 10px;
     display: block;
-    margin: 141px auto 0;
+    margin: 141px 5% 0;
     text-align: center;
     font-size: 12pt;
     background-color: var(--dark-mode-elements);
@@ -68,9 +67,9 @@ input[type="search"] {
 
 select.listContinents {
     display: block;
-    margin: 5% auto;
+    margin: 5% 0 5% 8%;
     height: 7vh;
-    width: 85%;
+    width: 50%;
     border-radius: 10px;
     font-size: 12pt;
     padding-left: 10%;
@@ -109,5 +108,10 @@ h3, h4, h5, h6 {
     }
     input[type="search"] {
         width: 30%;        
+    }
+
+    select.listContinents {       
+        margin: 5%;        
+        width: 85%;       
     }
 }
