--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,9 +1,20 @@
-<header [class.lightMode]="lightMode">
+ <header [class.lightMode]="lightMode" class="activated">
     <h1 [routerLink]="['/countries']" >Where in the world?</h1>
     <div class="modeSelector">       
-        <img [class.lightMode]="lightMode" class="moon" src="../../assets/moon-solid.svg" alt="" (click) = "toggleMode()">
-       <!-- <i class="fa fa-bars" [routerLink]="['/login']"></i> -->
+        <img [class.lightMode]="lightMode" class="moon" src="../../assets/moon-solid.svg" alt=""  (click) = "toggleMode()" >
+       
         <h2>{{lightMode ? "Light" : "Dark"}} Mode</h2>
     </div>
 </header>
-<router-outlet [class.lightMode]="lightMode"></router-outlet>
+
+<!--
+   <app-countries [lightMode] = "lightMode">{{lightMode}}</app-countries> 
+<header>
+    <nav>
+        <fa-icon [icon]="faDollarSign"></fa-icon>
+        
+        <fa-icon [icon]="faLightbulb" (click)="toggleTheme()"></fa-icon>
+      </nav> 
+</header>
+-->
+<router-outlet [class.lightMode]="lightMode" class="activated"></router-outlet>
