--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -2,13 +2,15 @@ body {
     margin: 0;
    padding: 0;
 }
-.wrapper {
-   /* background-color: hsl(207, 26%, 17%);*/
+:host {
+    background-color: var(--dark-mode-background);  
+    
+}
+.wrapper {  
     margin: 0;
    padding: 0;
    width: 100vw;
-   position: relative;
-   
+   position: relative;   
 }
 
 .container {
@@ -93,7 +95,10 @@ select.listContinents {
 h3, h4, h5, h6 {
     font-weight: 300;
 }
-
+h4 span {
+    font-weight: 100;
+    opacity: 0.4;
+}
 @media screen and (min-width: 700px) {
     nav {    
         padding-top: 5%;    
