--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -4,7 +4,8 @@
             <input type="search" name="searchHere" [(ngModel)]="countryFilter" placeholder="Search for a country...">
             <select class="listContinents" (change)='selectByContinent($event)' name="continents" placeholder="Filter by region">
                
-                <option *ngFor="let continent of continentList" [value]="continent"  [selected]='continent.selected == true' >{{continent}}</option>
+                <option *ngFor="let continent of continentList" [value]="continent" 
+                 [selected]='continent.selected == true' >{{continent}}</option>
             
             </select>           
         </nav>
@@ -16,9 +17,9 @@
             <img [src]="country.flag" alt="flag of 'country.flag'" [routerLink]="['/countries', country.name]">
             <div class="details">
                 <h3>{{country.name}}</h3>
-                <h4>Population: {{country.population | number}}</h4>
-                <h5>Region: {{country.region}}</h5>
-                <h6>Capital: {{country.capital}}</h6>               
+                <h4>Population:<span> {{country.population | number}}</span></h4>
+                <h4>Region: <span>{{country.region}}</span></h4>
+                <h4>Capital: <span> {{country.capital}}</span></h4>               
             </div>
         </div>
     </div>
