--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -18,4 +18,4 @@
       </nav> 
 </header>
 -->
-<router-outlet [class.lightMode]="lightMode" class="activated"></router-outlet>
+<router-outlet [class.lightMode]="lightMode" class="lightMode"></router-outlet>
