--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -3,12 +3,10 @@
     <form #form="ngForm">
         <nav>
             <input type="search" name="searchHere" [(ngModel)]="countryFilter"
-            [ngClass]="{'lightMode': message}"  placeholder="Search for a country...">
-            <select class="listContinents" (change)='selectByContinent($event)'
-            [ngClass]="{'lightMode': message}"  name="continents" placeholder="Filter by region">
+             placeholder="Search for a country..." [ngClass]="{'lightMode': message}">
+            <select class="listContinents" (change)='selectByContinent($event)' [ngClass]="{'lightMode': message}"  name="continents" placeholder="Filter by region">
                
-                <option *ngFor="let continent of continentList" [value]="continent"
-                 [ngClass]="{'lightMode': message}"
+                <option *ngFor="let continent of continentList" [value]="continent" [ngClass]="{'lightMode': message}"
                  [selected]='continent.selected == true' >{{continent}}</option>
             
             </select>           
