--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -1,4 +1,4 @@
-<div class="countryDetail">
+<div class="countryDetail" [ngClass]="{'lightMode': message}">
     <div class="btnContainer">
         <button class="btn btn-outline-secondary" (click)='onBack()'>
             Back
