--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -2,8 +2,10 @@
    
     <form #form="ngForm">
         <nav>
+            
             <input type="search" name="searchHere" [(ngModel)]="countryFilter"
              placeholder="Search for a country..." [ngClass]="{'lightMode': message}">
+            
             <select class="listContinents" (change)='selectByContinent($event)' [ngClass]="{'lightMode': message}"  name="continents" placeholder="Filter by region">
                
                 <option *ngFor="let continent of continentList" [value]="continent" [ngClass]="{'lightMode': message}"
@@ -17,7 +19,7 @@
     <div class="container">
         <div class="main" *ngFor="let country of filteredCountries">
             <img [src]="country.flag" alt="flag of 'country.flag'" [routerLink]="['/countries', country.name]">
-            <div class="details" [ngClass]="{'lightMode': message}">
+            <div class="details" [ngClass]="{'lightMode': message, 'lightModeShadow': message}">
                 <h3>{{country.name}}</h3>
                 <h4>Population:<span> {{country.population | number}}</span></h4>
                 <h4>Region: <span>{{country.region}}</span></h4>
