--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,11 @@
 }
 
 body {
-    background-color: var(--dark-mode-background); 
+    /* background-color: var(--dark-mode-background); 
+    color: white; */
     width: 100vw;
     overflow-x: hidden;
-    color: white; 
+   
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 100;
     padding: 0;
